# actix-maud-tailwindcss-htmx

./: .gitignore  Cargo.toml  tailwind.config.js
crates/application/src/models/: user.rs
crates/infrastructure/: Cargo.toml
crates/www/: Cargo.toml
crates/www-components/: Cargo.toml
crates/www-components/src/: page.rs
crates/www-routes/: Cargo.toml
crates/www-routes/src/: home.rs  lib.rs  login.rs
crates/www/src/: main.rs
