[workspace]
resolver = "2"
members = [
    "crates/application",
    "crates/infrastructure",
    "crates/www",
    "crates/www-components",
    "crates/www-routes",
]

[workspace.dependencies]
application = { path = "./crates/application", version = "0.1.0" }
infrastructure = { path = "./crates/infrastructure", version = "0.1.0" }
www-components = { path = "./crates/www-components", version = "0.1.0" }
www-routes = { path = "./crates/www-routes", version = "0.1.0" }
actix-web = "4"
actix-files = "0.6"
maud = { version = "0.26", features = ["actix-web"] }
