[package]
name = "www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application.workspace = true
infrastructure.workspace = true
www-components.workspace = true
www-routes.workspace = true

actix-web.workspace = true
actix-files.workspace = true
maud.workspace = true
